RESOLVED FIXED 199122
[iOS] Should not process key events in non-editable elements using IME
https://bugs.webkit.org/show_bug.cgi?id=199122
Summary [iOS] Should not process key events in non-editable elements using IME
Daniel Bates
Reported 2019-06-21 15:57:36 PDT
Attach Chinese/Japanese hardware keyboard. Steps to reproduce: 1. Visit <https://unixpapa.com/js/testkey.html> 2. Press 'a' You should see output like: keydown keyCode=65 (A) which=65 (A) charCode=0 keypress keyCode=97 (a) which=97 (a) charCode=97 (a) keyup keyCode=65 (A) which=65 (A) charCode=0 But I see: keydown keyCode=229 which=229 charCode=0 shiftKey=false ctrlKey=false altKey=false metaKey=false key=a char=undefined location=0 repeat=false keyup keyCode=65 (A) which=65 (A) charCode=0 shiftKey=false ctrlKey=false altKey=false metaKey=false key=a char=undefined location=0 repeat=false
Attachments
Patch (20.46 KB, patch)
2019-06-21 16:48 PDT, Daniel Bates
no flags
Radar WebKit Bug Importer
Comment 1 2019-06-21 16:03:42 PDT
Daniel Bates
Comment 2 2019-06-21 16:48:58 PDT
Brent Fulgham
Comment 3 2019-06-24 14:06:30 PDT
Comment on attachment 372660 [details] Patch Looks good -- now we match macOS behavior. r=me
Daniel Bates
Comment 4 2019-06-25 14:47:14 PDT
Comment on attachment 372660 [details] Patch Clearing flags on attachment: 372660 Committed r246810: <https://trac.webkit.org/changeset/246810>
Daniel Bates
Comment 5 2019-06-25 14:47:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.